# pgvector_client

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
pgvector_client/: __init__.py  client.py
tests/: pgvector_client_test.py
