[tool.poetry]
name = "pgvector-client"
version = "0.1.0"
description = ""
authors = ["Leo Thomas <leo@developmentseed.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg = {version = "^3.1.18", extras = ["binary", "pool"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
